# cortex-coach

./: .gitignore  README.md  pyproject.toml
.github/workflows/: cortex-validation.yml  release.yml
cortex_coach/: __init__.py  agent_context_loader.py  cli.py  coach.py  design_prompt_dsl_compile.py
cortex_coach.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
docs/cortex-coach/: README.md  agent-context-loader.md  bugfix_plan_decision_gap_audit_artifacts_v0.md  commands.md  faq.md  install.md  known_issue_decision_gap_recursive_v0.md  maintainer-mode.md  migration-matrix.md  quality-gate.md  quickstart.md  release_versioning_v0.md  state_storage_db_discussion_note_v0.md  troubleshooting.md
scripts/: ci_validate_docs_and_json_v0.sh  cortex_project_coach_v0.py  design_prompt_dsl_compile_v0.py  quality_gate_ci_full_v0.sh  quality_gate_ci_v0.sh  quality_gate_v0.sh
tests/: conftest.py  test_coach_artifact_conformance.py  test_coach_assets_dir.py  test_coach_audit_needed.py  test_coach_audit_scope.py  test_coach_context_load.py  test_coach_context_policy.py  test_coach_contract_check.py  test_coach_decision_gap_check.py  test_coach_decisions.py  test_coach_memory_diff.py  test_coach_memory_prime.py  test_coach_memory_promote.py  test_coach_memory_prune.py  test_coach_memory_record.py  test_coach_memory_search.py  test_coach_memory_smoke.py  test_coach_policy_enable.py  test_coach_promotion_candidates.py  test_coach_reflection_completeness.py  test_coach_reflection_scaffold.py  test_coach_rollout_mode.py  test_coach_spec_coverage.py
(+9 files in other folders)
