[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "cortex-coach"
version = "0.1.0"
description = "Standalone runtime CLI for Cortex lifecycle coaching."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "jsonschema>=4.10.0",
]

[dependency-groups]
dev = [
  "pytest==9.0.2",
]

[project.scripts]
cortex-coach = "cortex_coach.cli:main"

[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
include = ["cortex_coach*"]
